force-app/main/default/objects/phsCourseModule__c/phsCourseModule__c.object-meta.xml
<CustomObject>
    <description>This object holds modules of a course</description>
    <label>phsCourseModule</label>
    <nameField>
        <label>phsCourseModule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsCourseModules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>