force-app/main/default/objects/phsCourseModule__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration of course</description>
    <inlineHelpText>Duration of course module</inlineHelpText>
    <label>Duration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>