force-app/main/default/objects/phsCourseModule__c/fields/ModulePart__c.field-meta.xml
<CustomField>
    <fullName>ModulePart__c</fullName>
    <label>ModulePart</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>