force-app/main/default/objects/phsCourseModule__c/fields/phsCourses__c.field-meta.xml
<CustomField>
    <fullName>phsCourses__c</fullName>
    <label>phsCourses</label>
    <referenceTo>phsCourses__c</referenceTo>
    <relationshipLabel>phsCourseModules</relationshipLabel>
    <relationshipName>phsCourseModules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>