force-app/main/default/objects/phsCourseModule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>phsCourses__c</columns>
    <columns>Description__c</columns>
    <columns>Details__c</columns>
    <columns>Duration__c</columns>
    <columns>ModulePart__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>